# 00_addLogo

./: README.md
cxx/: CMakeLists.txt  main.cpp
python/: main.py  main.spec  setup.py
sh_mono/: 00_addLogo.sln
sh_mono/gui/: MainWindow.cs  Program.cs  main.csproj
sh_mono/gui/gtk-gui/: MainWindow.cs  gui.stetic
